# Subsurface

./: .travis.yml  CMakeLists.txt  README.md  subsurface.qrc
.github/workflows/: android-dockerimage.yml  linux-dockerimage.yml  linux-eoan-5.12.yml  linux-groovy-5.14.yml  linux-tumbleweed-qt-latest.yml  mxe-dockerimage-stage1.yml  mxe-dockerimage-stage2.yml  windows.yml
commands/: command_divelist.cpp  command_edit.cpp
core/: dive.h  divefilter.cpp  divelist.c  parse-xml.c  plannernotes.c  qthelper.h  save-git.c  save-xml.c
core/settings/: qPrefGeneral.h
core/subsurface-qt/: DiveListNotifier.h
desktop-widgets/: CMakeLists.txt  abstractDivelistGps.h  command.cpp  command.h  command_edit.cpp  command_edit.h  divelistgps.cpp  divelistgps.h  divelistgps.ui  divelistview.cpp  divelistview.h  mainwindow.cpp  mainwindow.h  shiftGPStime.ui  statswidget.cpp  statswidget.ui
desktop-widgets/tab-widgets/: TabDiveInformation.cpp  TabDiveInformation.h  TabDiveInformation.ui  maintab.cpp  maintab.h  maintab.ui
packaging/android/: android-build-wrapper.sh
profile-widget/: diveeventitem.cpp
qt-models/: divetripmodel.cpp
scripts/android/: travisbuild.sh
stats/: statstypes.cpp  statstypes.h  statsview.cpp  statsview.h
stats-widget/: CMakeLists.txt
stats/qml/: statsview.qml
